--- a/index.html
+++ b/index.html
@@ -79,56 +79,56 @@
             <div class=" box">
                 <div class="box-content">
                     <h2>Health and Personal Care</h2>
-                    <div class="box-img" style="background-image: url('images/box1_image.jpg');"></div>
+                    <div class="box-img" style="background-image: url('box1_image.jpg');"></div>
                     <a href="#">see more</a>
                 </div>
             </div>
             <div class=" box">
                 <div class="box-content">
                     <h2>Grooming</h2>
-                    <div class="box-img" style="background-image: url('images/box2_image.jpg');"></div>
+                    <div class="box-img" style="background-image: url('box2_image.jpg');"></div>
                     <a href="#">see more</a>
                 </div>
             </div>
             <div class=" box">
                 <div class="box-content">
                     <h2>Furniture</h2>
-                    <div class="box-img" style="background-image: url('images/box3_image.jpg');"></div>
+                    <div class="box-img" style="background-image: url('box3_image.jpg');"></div>
                     <a href="#">see more</a>
                 </div>
             </div>
             <div class=" box">
                 <div class="box-content">
                     <h2>Smartphones</h2>
-                    <div class="box-img" style="background-image: url('images/box4_image.jpg');"></div>
+                    <div class="box-img" style="background-image: url('box4_image.jpg');"></div>
                     <a href="#">see more</a>
                 </div>
             </div>
             <div class=" box">
                 <div class="box-content">
                     <h2>Beauty Products</h2>
-                    <div class="box-img" style="background-image: url('images/box5_image.jpg');"></div>
+                    <div class="box-img" style="background-image: url('box5_image.jpg');"></div>
                     <a href="#">see more</a>
                 </div>
             </div>
             <div class=" box">
                 <div class="box-content">
                     <h2>Pet Care</h2>
-                    <div class="box-img" style="background-image: url('images/box6_image.jpg');"></div>
+                    <div class="box-img" style="background-image: url('box6_image.jpg');"></div>
                     <a href="#">see more</a>
                 </div>
             </div>
             <div class=" box">
                 <div class="box-content">
                     <h2>Travelling</h2>
-                    <div class="box-img" style="background-image: url('images/box7_image.jpg');"></div>
+                    <div class="box-img" style="background-image: url('box7_image.jpg');"></div>
                     <a href="#">see more</a>
                 </div>
             </div>
             <div class=" box">
                 <div class="box-content">
                     <h2>Fashion</h2>
-                    <div class="box-img" style="background-image: url('images/box8_image.jpg');"></div>
+                    <div class="box-img" style="background-image: url('box8_image.jpg');"></div>
                     <a href="#">see more</a>
                 </div>
             </div>
